cabal-version:   1.18
name:            path-io
version:         1.6.2
license:         BSD3
license-file:    LICENSE.md
maintainer:      Mark Karpov <markkarpov92@gmail.com>
author:          Mark Karpov <markkarpov92@gmail.com>
tested-with:     ghc ==8.6.5 ghc ==8.8.4 ghc ==8.10.2
homepage:        https://github.com/mrkkrp/path-io
bug-reports:     https://github.com/mrkkrp/path-io/issues
synopsis:        Interface to ‘directory’ package for users of ‘path’
description:     Interface to ‘directory’ package for users of ‘path’.
category:        System, Filesystem
build-type:      Simple
extra-doc-files:
    CHANGELOG.md
    README.md

source-repository head
    type:     git
    location: https://github.com/mrkkrp/path-io.git

flag dev
    description: Turn on development settings.
    default:     False
    manual:      True

library
    exposed-modules:  Path.IO
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        containers -any,
        directory >=1.3.2.0 && <1.4,
        dlist >=0.8 && <2.0,
        exceptions >=0.8 && <0.11,
        filepath >=1.2 && <1.5,
        path >=0.6 && <0.9,
        temporary >=1.1 && <1.4,
        time >=1.4 && <1.11,
        transformers >=0.3 && <0.6,
        unix-compat -any

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall

    if flag(dev)
        ghc-options:
            -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
            -Wnoncanonical-monad-instances

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   tests
    default-language: Haskell2010
    build-depends:
        base >=4.12 && <5.0,
        directory >=1.3.2.0 && <1.4,
        exceptions >=0.8 && <0.11,
        hspec >=2.0 && <3.0,
        filepath >=1.2 && <1.5,
        path >=0.6 && <0.9,
        path-io -any,
        transformers >=0.3 && <0.6,
        unix-compat -any

    if flag(dev)
        ghc-options: -Wall -Werror

    else
        ghc-options: -O2 -Wall
